<resources>
    <string name="app_name">RSS-Aggregator</string>

    <!-- Test strings -->
    <string name="hello_fragment_rss">RSS</string>
    <string name="hello_fragment_management">MANAGEMENT</string>
    <string name="hello_fragment_profile">PROFILE</string>

    <!-- Fragment labels -->
    <string name="fragment_rss_feed_label">Fragment feed rss</string>
    <string name="fragment_rss_management_label">Fragment management</string>
    <string name="fragment_rss_profile_label">Fragment profile</string>

    <!-- Menu items -->
    <string name="menu_item_rss">RSS</string>
    <string name="menu_item_management">Gestión</string>
    <string name="menu_item_profile">Perfil</string>

    <!-- Toolbars -->
    <string name="toolbar_manage_title">Gestión Rss</string>
    <string name="toolbar_feed_title">Listado Rss</string>




    <!-- Bottom sheet form -->
    <string name="bottom_sheet_title">Agregar Rss</string>
    <string name="input_rss_name">Nombre Rss</string>
    <string name="input_rss_url">Url Rss</string>
    <string name="input_rss_button_save">Guardar</string>
    <string name="input_rss_button_cancel">Cancelar</string>
    
    <!-- Snackbar messages -->
    <string name="snackbar_content_updated">Contenido actualizado</string>
    <string name="snackbar_error">Se ha producido un error</string>
    <string name="snackbar_success">Operación realizada con éxito</string>
    <string name="snackbar_rss_deleted">Rss eliminado con éxito</string>

</resources>